overflow-wrap && input autofill issues fixed

--- a/components/PostCard/post_card.module.scss
+++ b/components/PostCard/post_card.module.scss
@@ -17,7 +17,7 @@
 
   .description {
     padding: 1rem 1rem 0 1rem;
-    line-break: anywhere;
+    overflow-wrap: break-word;
 
     &:hover {
       cursor: pointer;
